# sensio_ts_rust_native

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-06-27-sensio-taste-reconstruction.md
docs/superpowers/specs/: 2026-06-27-sensio-taste-reconstruction-design.md
src/: App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs
src/components/: LibraryPage.tsx  PdfViewer.tsx  ReaderPage.tsx
src/lib/: hashRoute.ts  pdf.ts  preferences.ts  uiTypes.ts
src/state/: libraryStore.ts
src/styles/: app.css
test/: preferences.test.mjs
